# co-oCCur

./: .gitignore  CMakeLists.txt  README.md  co_oCCur-original.srt  temp_rich.srt
demo/TestFiles/subtitles/: example1.srt
demo/ToolA/: CMakeLists.txt  main.cpp
demo/ToolB/: CMakeLists.txt  main.cpp
docs/: code_documentation.adoc  compiling.adoc  installing_dependencies.adoc  usage.adoc
install/: CMakeCache.txt  Makefile  cmake_install.cmake  co_oCCur  temp.srt
install/TestFiles/Subtitles/: example.srt
libs/lib_co-oCCur/: SiftSRT.h
libs/lib_co-oCCur/SiftSRT/: SiftSRT.h
libs/lib_co-oCCur/SiftSRT/demo/: main.cpp
libs/lib_ext/CCAligner/: read_wav_file.cpp  read_wav_file.h
libs/lib_ext/chromaprint/src/audio/: ffmpeg_audio_reader.h
src/: co-oCCur_main.cpp  co-occur.cpp  co-occur.h  co_occur.cpp  co_occur.h  main.cpp  toolA.cpp  toolA.h  toolB.cpp  toolB.h
src/tools/: toolA.cpp  toolA.h  toolB.cpp  toolB.h
src/utils/: alignA.cpp  alignA.h  alignB.cpp  alignB.h  align_fp.cpp  align_the_fingerprints.cpp  align_the_fingerprints.h  audioSegmentation.cpp  audioSegmentation.h  base64Strings.cpp  base64strings.cpp  base64strings.h  dactylogram.cpp  dactylogram.h  debug.h  matchFP.cpp  matchFP.h  rough.cpp  vad.cpp  vad.h
